--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,11 @@
     <button class="btn btn-primary" (click)="onAdd(input.value)">Add Item!</button>
     <hr>
     <ul class="list-group">
-      <li class="list-group-item" (click)="onDelete(item)" *ngFor="let item of list">
+      <li 
+        class="list-group-item" 
+        (click)="onDelete(item)"
+        [@list1]=""
+        *ngFor="let item of list">
         {{ item }}
       </li>
     </ul>
@@ -27,7 +31,10 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" (click)="onDelete(item)" *ngFor="let item of list">
+      <li 
+        class="list-group-item" 
+        (click)="onDelete(item)" 
+        *ngFor="let item of list">
         {{ item }}
       </li>
     </ul>
