Using Keyframes for Animations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       <li 
         class="list-group-item" 
         (click)="onDelete(item)"
-        [@list1]=""
+        [@list1]
         *ngFor="let item of list">
         {{ item }}
       </li>
@@ -33,7 +33,8 @@
     <ul class="list-group">
       <li 
         class="list-group-item" 
-        (click)="onDelete(item)" 
+        (click)="onDelete(item)"
+        [@list2] 
         *ngFor="let item of list">
         {{ item }}
       </li>
